--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Blendify</string>
+    <string name="app_name">Youtruvian</string>
     <string name="action_settings">Settings</string>
     <string name="action_pic1">1</string>
     <string name="action_pic2">2</string>
