--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Youtruvian</string>
     <string name="action_settings">Settings</string>
-    <string name="action_pic1">1</string>
-    <string name="action_pic2">2</string>
-    <string name="action_blend">X</string>
-    <string name="action_contact">Share</string>
+    <string name="action_pic1">X</string>
+    <string name="action_pic2">T</string>
+    <string name="action_blend">B</string>
+    <string name="action_contact">Contact</string>
 </resources>
