Add save contact details form

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="action_pic2">T</string>
     <string name="action_blend">B</string>
     <string name="action_contact">Contact</string>
+    <string name="ok_button">Thanks!</string>
 </resources>
